// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorProblemView component renders raw editor 1`] = `
<injectIntl(ShimmedIntlComponent)
  getContent={[Function]}
>
  <div
    className="editProblemView d-flex flex-row flex-nowrap justify-content-around"
  >
    <div
      className="mt-4.5"
    >
      <RawEditor
        content={null}
        editorRef={
          Object {
            "current": null,
          }
        }
        lang="xml"
        width={
          Object {
            "width": "75%",
          }
        }
      />
    </div>
    <span
      className="editProblemView-settingsColumn"
    >
      <injectIntl(ShimmedIntlComponent)
        problemType="advanced"
      />
    </span>
  </div>
</injectIntl(ShimmedIntlComponent)>
`;

exports[`EditorProblemView component renders simple view 1`] = `
<injectIntl(ShimmedIntlComponent)
  getContent={[Function]}
>
  <div
    className="editProblemView d-flex flex-row flex-nowrap justify-content-around"
  >
    <span
      className="flex-grow-1"
    >
      <injectIntl(ShimmedIntlComponent) />
      <injectIntl(ShimmedIntlComponent)
        problemType="multiplechoiceresponse"
      />
    </span>
    <span
      className="editProblemView-settingsColumn"
    >
      <injectIntl(ShimmedIntlComponent)
        problemType="multiplechoiceresponse"
      />
    </span>
  </div>
</injectIntl(ShimmedIntlComponent)>
`;
